--- a/01.md
+++ b/01.md
@@ -15,4 +15,24 @@ firewall-cmd --state
 
 # 파일 시스템 총 용량, 사용량, 남은 용량 확인
 df -h
+
+# 그룹 dba 생성 후 그룹 ID 500으로 실행
+groupadd -g 500 dba
+
+# 그룹 dba2 생성 후 그룹 ID 600으로 실행
+groupadd -g 600 dba2
+
+# 사용자 banet 생성 후 홈 디렉토리 /home/banet 생성
+useradd 0m 0d home/banet banet
+
+# 사용자 banet의 그룹을 dba로 지정
+usermod -g dba banet
+
+# 생성된 banet의 홈 디렉토리 확인
+grep "^banet:" /etc/passwd
+ls -ld /home/banet
+
+# 사용자 datagen 생성 후 홈 디렉토리 /home/datagen 지정 및 dba2 그룹 지정
+useradd -m -d /home/datagen -g dba2 datagen
+
 ```
