--- a/01.md
+++ b/01.md
@@ -23,7 +23,7 @@ groupadd -g 500 dba
 groupadd -g 600 dba2
 
 # 사용자 banet 생성 후 홈 디렉토리 /home/banet 생성
-useradd 0m 0d home/banet banet
+useradd -m -d home/banet banet
 
 # 사용자 banet의 그룹을 dba로 지정
 usermod -g dba banet
