--- a/01.md
+++ b/01.md
@@ -22,17 +22,17 @@ groupadd -g 500 dba
 # 그룹 dba2 생성 후 그룹 ID 600으로 실행
 groupadd -g 600 dba2
 
-# 사용자 banet 생성 후 홈 디렉토리 /home/banet 생성
-useradd -m -d home/banet banet
+# 사용자 user1 생성 후 홈 디렉토리 /home/user1 생성
+useradd -m -d home/user1 user1
 
-# 사용자 banet의 그룹을 dba로 지정
-usermod -g dba banet
+# 사용자 user1의 그룹을 dba로 지정
+usermod -g dba user1
 
-# 생성된 banet의 홈 디렉토리 확인
-grep "^banet:" /etc/passwd
-ls -ld /home/banet
+# 생성된 user1의 홈 디렉토리 확인
+grep "^user1:" /etc/passwd
+ls -ld /home/user1
 
-# 사용자 datagen 생성 후 홈 디렉토리 /home/datagen 지정 및 dba2 그룹 지정
-useradd -m -d /home/datagen -g dba2 datagen
+# 사용자 user2 생성 후 홈 디렉토리 /home/user2 지정 및 dba2 그룹 지정
+useradd -m -d /home/user2 -g dba2 user2
 
 ```
