--- a/01.md
+++ b/01.md
@@ -2,6 +2,16 @@
 # 네트워크 인터페이스 확인
 ifconfig
 
+# 네트워크 인터페이스 수동 설정
+nmcli connection modify enp2s0 \
+ipv4.addresses 192.168.10.153/24 \
+ipv4.gateway 192.168.10.1 \
+ipv4.dns "168.126.63.1 168.126.63.2" \
+ipv4.method manual
+
+nmcli connection up enp2s0
+
+
 # ens160 인터페이스에 고정 IP 192.168.10.100/24, 게이트웨이 192.168.10.1 설정
 nmcli con add type ethernet ifname ens160 con-name ens160 \
 ipv4.address 192.168.10.100/24 ipv4.gateway 192.168.10.1 autoconnect yes
