--- a/02.md
+++ b/02.md
@@ -1,3 +1,4 @@
+```bash
 # 그룹 dba 생성 후 그룹 ID 500으로 실행
 groupadd -g 500 dba
 
@@ -12,3 +13,4 @@ usermod -g dba user1
 
 # 생성된 user1의 홈 디렉토리 확인
 grep "^user1:" /etc/passwd
+```
