--- a/02.md
+++ b/02.md
@@ -13,4 +13,7 @@ usermod -g dba user1
 
 # 생성된 user1의 홈 디렉토리 확인
 grep "^user1:" /etc/passwd
+
+# 사용자 생성 후 홈 디렉토리 지정 및 그룹 지정
+useradd -m -d /home/user2 -g dba2 user2
 ```
