--- a/03.md
+++ b/03.md
@@ -7,11 +7,19 @@ mkdir -p /project/test
 # /home/user1 디렉토리에 hello.txt 파일을 생성 후 Hello Rocky! 문자열 기록
 cat >> /home/user1/hello.txt
 Hello Rocky!
-^D!
+^D
 # /home/user/hello.txt 읽기
 cat /home/user/hello.txt
 Hello Rocky!
 
-# vi 편집기로 열기
+# vi 편집기로 실행
 vi /home/user/hello.txt
+
+# vi 편집기 사용 단축키
+i : 입력
+Esc : 입력 종료
+:w : 저장
+:q : 종료
+:x : 저장 후 종료
+:q! : 저장 없이 종료
 ```
