--- a/03.md
+++ b/03.md
@@ -22,4 +22,14 @@ Esc : 입력 종료
 :q : 종료
 :x : 저장 후 종료
 :q! : 저장 없이 종료
+Ctrl + f : 다음 페이지
+Ctrl + U : 이전 페이지
+:1000 : 1000번 줄로 이동
+/abc : abc 검색 (아래 방향으로)
+?abc : abc 검색 (위 방향으로)
+n : 다음 검색 결과로 이동
+N : 이전 검색 결과로 이동
+
+
+# /usr/share/dict/words (영문 사전) 으로 대량의 텍스트 파일에 대한 조작 연습
 ```
