--- a/04.md
+++ b/04.md
@@ -17,7 +17,7 @@ rm file : 파일 삭제
 rm -i file : 삭제 전 확인
 rm -f file : 강제 삭제 확인 없이
 rm -r dir : 디렉토리 내부 내용 삭제
-rm -rf dir : 디렉토리 내부 내용 포함 삭제 확인 없이 << 위험
+rm -rf dir : 디렉토리 내부 내용 포함 삭제 확인 없이
 
 mv file1 fiel2 : file1을 file2로 이름 변경
 mv file1 dir/ : 해당 디렉토리로 파일 이동
