--- a/01.md
+++ b/01.md
@@ -28,4 +28,8 @@ firewall-cmd --state
 
 # 파일 시스템 총 용량, 사용량, 남은 용량 확인
 df -h
+
+# 언어 설정
+localectl status
+localectl set-locale LANG=en_US.UTF-8
 ```
