--- a/01.md
+++ b/01.md
@@ -30,6 +30,7 @@ firewall-cmd --state
 df -h
 
 # 언어 설정
+dnf install glibc-langpack-en
 localectl status
 localectl set-locale LANG=en_US.UTF-8
 ```
