--- a/04.md
+++ b/04.md
@@ -28,4 +28,6 @@ mv -v file1 file2 : 이동 과정 자세히 표시
 -i : 확인 하기
 -f : 강제 실행
 -v : 과정 표시
+
+mkdir -p /0910 && touch /0910/0910.txt && cp /0910/0910.txt /0910/0910_cp.txt
 ```
