--- a/01.md
+++ b/01.md
@@ -1,27 +1,8 @@
-```bash
 # superuser(root) 권한으로 실행
 sudo
 
 # 네트워크 인터페이스 확인
 ifconfig
-
-# 네트워크 인터페이스 수동 설정
-nmcli connection modify enp2s0 \
-ipv4.addresses 192.168.10.153/24 \
-ipv4.gateway 192.168.10.1 \
-ipv4.dns "168.126.63.1 168.126.63.2" \
-ipv4.method manual
-
-nmcli connection up enp2s0
-
-
-# ens160 인터페이스에 고정 IP 192.168.10.100/24, 게이트웨이 192.168.10.1 설정
-nmcli con add type ethernet ifname ens160 con-name ens160 \
-ipv4.address 192.168.10.100/24 ipv4.gateway 192.168.10.1 autoconnect yes
-
-# 서버 호스트명 rocky-server1로 변경 후 확인
-hostnamectl set-hostname rocky-server1
-hostnamectl
 
 # 방화벽 상태 확인
 firewall-cmd --state
@@ -33,4 +14,126 @@ df -h
 dnf install glibc-langpack-en
 localectl status
 localectl set-locale LANG=en_US.UTF-8
-```
+
+# 네트워크 인터페이스 수동 설정
+nmcli connection modify enp2s0 \
+ipv4.addresses 192.168.10.153/24 \
+ipv4.gateway 192.168.10.1 \
+ipv4.dns "168.126.63.1 168.126.63.2" \
+ipv4.method manual
+
+nmcli connection up enp2s0
+
+# 서버 호스트명 root로 변경
+hostnamectl set-hostname root
+
+# root 계정 외부 접근 허용
+vi /etc/ssh/sshd_config
+PermitRootLogin Yes
+
+systemctl restart sshd
+
+# PuTTY root 접속
+mkdir -p /mis/client
+
+# Windows cmd
+pscp C:\Users\datisbanet\Downloads\mariadb-10.11.14-linux-systemd-x86_64.tar.gz root@192.168.10.153:/mis/client
+
+# PuTTY
+tar -xvzf mariadb-10.11.14-linux-systemd-x86_64.tar.gz -C /mis/client
+mv /mis/client/mariadb-10.11.14-linux-systemd-x86_64 /mis/client/mariadb
+
+mkdir -p /mis/client/datadir
+
+cd /mis/client/mariadb
+scripts/mysql_install_db --user=root --datadir=/mis/client/datadir
+
+vi /mis/client/mariadb/start_mariadb.sh
+#!/bin/bash
+exec /mis/client/mariadb/bin/mariadbd \
+  --basedir=/mis/client/mariadb \
+  --datadir=/mis/client/datadir \
+  --user=root
+
+chmod +x /mis/client/mariadb/start_mariadb.sh
+
+vi /etc/systemd/system/mariadb.service
+
+[Unit]
+Description=MariaDB 10.11.14 database server
+After=network.target
+
+[Service]
+Type=simple
+ExecStart=/mis/client/mariadb/start_mariadb.sh
+Restart=on-failure
+
+[Install]
+WantedBy=multi-user.target
+
+systemctl daemon-reload
+systemctl start mariadb
+systemctl status mariadb
+
+systemctl enable mariadb
+
+systemctl is-enabled mariadb
+
+SELinux 상태 확인:
+
+getenforce
+
+
+결과: Enforcing → 권한 제한이 적용 중.
+
+일시적으로 SELinux 비활성화:
+
+setenforce 0
+
+
+Enforcing → Permissive로 변경.
+
+이후 systemd로 MariaDB 실행 시 정상 구동됨.
+
+systemd 서비스 상태 확인:
+
+systemctl restart mariadb
+systemctl status mariadb
+
+
+MariaDB Active: active (running) 상태 확인.
+
+/mis/client/mariadb/bin/mysql -u root -p
+
+SELECT User, Host FROM mysql.user;
+CREATE USER 'datagen'@'%' IDENTIFIED BY 'datagen12';
+GRANT ALL PRIVILEGES ON *.* TO 'datagen'@'%' WITH GRANT OPTION;
+FLUSH PRIVILEGES;
+
+/mis/client/mariadb/bin/mysql -u datagen -p
+
+DROP USER ''@'root';
+DROP USER ''@'localhost';
+DROP USER ''@'%';
+
+CREATE USER 'root'@'%' IDENTIFIED BY 'root12';
+GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
+FLUSH PRIVILEGES;
+
+ALTER USER 'root'@'localhost' IDENTIFIED BY 'root12';
+ALTER USER 'datagen'@'%' IDENTIFIED BY 'datagen12';
+
+CREATE DATABASE dbgen
+
+GRANT ALL PRIVILEGES ON dbgen.* TO 'datagen'@'%';
+FLUSH PRIVILEGES;
+
+SHOW DATABASES;
+
+GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
+FLUSH PRIVILEGES;
+
+firewall-cmd --list-all
+
+firewall-cmd --zone=public --add-port=3306/tcp --permanent
+firewall-cmd --reload
